if skills present then dispay all skills in neon template

--- a/app/views/resumes/themes/_neon.html.erb
+++ b/app/views/resumes/themes/_neon.html.erb
@@ -16,8 +16,17 @@
         <% end %>
       </ul>
     <% end %>
-
     
+    <% if resume.skills.any? %>
+      <h5 class="mt-3">Skills</h5>
+      <ul class="list-group list-group-flush mb-3">
+        <% resume.skills.each do |skill| %>
+          <li class="list-group-item">
+            <strong><%= skill.name %></strong>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
   </div>
 
   <div class="card-footer text-end">
