--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,12 +12,15 @@
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "My Resume", user_resume_path(current_user, current_user.resume), class: "nav-link" if current_user.resume %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "New Resume", new_user_resume_path(current_user), class: "nav-link" unless current_user.resume %>
-          </li>
+          <% if current_user&.resume&.persisted? %>
+            <li class="nav-item">
+              <%= link_to "My Resume", user_resume_path(current_user, current_user.resume), class: "nav-link" if current_user.resume %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "New Resume", new_user_resume_path(current_user), class: "nav-link" unless current_user.resume %>
+            </li>
+          <% end %>
         <% end %>
       </ul>
 
