display username in index page

--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -9,7 +9,8 @@
             <div class="text-center p-3 bg-dark text-success rounded">
               <h2 class="display-6"><%= resume.name %></h2>
               <p><%= resume.bio %></p>
-              <small>Theme : <%= resume.theme %></small>
+              <small>Theme : <%= resume.theme %></small><br>
+              <small>Username : <%= resume.user.email %></small>
             </div>
             
           </div>
