--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -3,19 +3,20 @@
 <div class="container">
   <div class="row">
     <% @resumes.each do |resume| %>
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <div class="text-center p-3 bg-dark text-success rounded">
-              <h2 class="display-6"><%= resume.name %></h2>
-              <p><%= resume.bio %></p>
-              <small>Theme : <%= resume.theme %></small><br>
-              <small>Username : <%= resume.user.email %></small>
-            </div>
-            
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card shadow-sm">
+            <%= link_to user_resume_path(resume.user, resume), class: "text-decoration-none" do %>
+              <div class="card-body">
+                <div class="text-center p-3 bg-dark text-success rounded">
+                  <h2 class="display-6"><%= resume.name %></h2>
+                  <p><%= resume.bio %></p>
+                  <small>Theme : <%= resume.theme %></small><br>
+                  <small>Username : <%= resume.user.email %></small>
+                </div>
+              </div>
+            <% end %>
           </div>
         </div>
-      </div>
     <% end %>
   </div>
 </div>
