--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -1,2 +1,13 @@
-<%= render "resumes/themes/#{@resume.theme}", resume: @resume %>
-<%= link_to "Download as PDF", user_resume_path(current_user, @resume, format: :pdf), class: "btn btn-primary mb-3" %>
+<div class="container my-5">
+  <!-- Resume Theme Content -->
+  <div class="mb-4">
+    <%= render "resumes/themes/#{@resume.theme}", resume: @resume %>
+  </div>
+
+  <div class="d-flex flex-wrap gap-2 mb-4">
+    <%= link_to "Download as PDF", user_resume_path(current_user, @resume, format: :pdf), 
+        class: "btn btn-primary" %>
+    <%= link_to "Edit this", edit_user_resume_path(@resume.user, @resume), 
+        class: "btn btn-secondary" %>
+  </div>
+</div>
