--- a/app/views/resumes/show.pdf.erb
+++ b/app/views/resumes/show.pdf.erb
@@ -5,6 +5,6 @@
   <%= wicked_pdf_stylesheet_link_tag 'application' %>
 </head>
 <body>
-  <%= render partial: "resumes/themes/neon", formats: [:html], locals: { resume: @resume } %>
+  <%= render partial: "resumes/themes/#{@resume.theme}", formats: [:html], locals: { resume: @resume } %>
 </body>
 </html>
