--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -3,13 +3,54 @@
 <div class="container">
   <div class="row">
     <% @resumes.each do |resume| %>
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card shadow-sm">
-            <%= link_to (user_signed_in? ? new_user_resume_path(current_user, theme: resume.theme) : new_user_session_path), class: "text-decoration-none" do %>
-              <%= render "resumes/themes/#{resume.theme}", resume: resume %>
-            <% end %>
-          </div>
+      <div class="col-md-6 col-lg-4 mb-4">
+        <div class="card shadow-sm resume-card">
+          <%= link_to (user_signed_in? ? new_user_resume_path(current_user, theme: resume.theme) : new_user_session_path), class: "text-decoration-none" do %>
+            <%= render "resumes/themes/#{resume.theme}", resume: resume %>
+            <div class="overlay-text">Select this template</div>
+          <% end %>
         </div>
+      </div>
     <% end %>
   </div>
 </div>
+
+<style>
+
+.resume-card a {
+  color: inherit !important;
+  text-decoration: none !important;
+  display: block;
+  position: relative;
+}
+
+.resume-card .overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.resume-card:hover .overlay-text {
+  opacity: 1;
+}
+
+.resume-card {
+  height: 700px;
+  overflow: hidden;
+}
+
+.resume-card .card-body {
+  height: 100%;
+}
+</style>
