--- a/app/views/resumes/themes/_neon.html.erb
+++ b/app/views/resumes/themes/_neon.html.erb
@@ -29,14 +29,8 @@
     <% end %>
 
     <% if resume.skills.any? %>
-      <h5 class="mt-3">Skills</h5>
-      <ul class="list-group list-group-flush mb-3">
-        <% resume.skills.each do |skill| %>
-          <li class="list-group-item">
-            <strong><%= skill.name %></strong>
-          </li>
-        <% end %>
-      </ul>
+      <h4 class="">Skills</h4>
+      <p><%= resume.skills.map(&:name).join(", ") %></p>
     <% end %>
 
     <% if resume.projects.any? %>
